// Copyright 2021 The Rode Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package collector_image_scanner.v1alpha1;

option go_package = "github.com/rode/collector-image-scanner/proto/v1alpha1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service CollectorImageScanner {
  rpc StartImageScan(CreateImageScanRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1alpha1/scan"
      body: "*"
    };
  }
}

message CreateImageScanRequest {
  string image_uri = 1;
}